--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "start:frontend": "react-scripts start",
-    "start:backend": "cd ../backend && uvicorn app.main:app --reload",
+    "start:backend": "cd ../backend && uvicorn app.main:app --reload --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
