--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "downshift": "^9.0.8",
-    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-leaflet": "^4.2.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
